--- a/rest/client/flower_shop/pyproject.toml
+++ b/rest/client/flower_shop/pyproject.toml
@@ -28,8 +28,8 @@ build-backend = "hatchling.build"
 packages = ["."]
 
 [tool.uv.sources]
-# The relative path is stored here
-ucp-sdk = { path = "../../../../../sdk/python/", editable = true }
+# Expects SDK at ../../../../sdk/python/ (sibling to this repo)
+ucp-sdk = { path = "../../../../sdk/python/", editable = true }
 
 [tool.ruff]
 line-length = 80
